vlib/v/checker/tests/struct_implements_interface_more_than_once_err.vv
import io { Writer }

struct Abc implements Writer, Writer, Writer {
	aaa string
}

fn (a Abc) write(buf []u8) !int {
	return 42
}

// vfmt off
struct Def implements Writer, io.Writer {
	aaa string
}
// vfmt on

fn (a Def) write(buf []u8) !int {
	return 42
}
